fullSandbox11072023/force-app/main/default/objects/Pain_Profile__c/Pain_Profile__c.object-meta.xml
<CustomObject>
    <description>Used to hold information about Accounts from the Pain Management Team AEM.</description>
    <label>Pain Profile</label>
    <nameField>
        <displayFormat>Pain-{00000}</displayFormat>
        <label>Pain Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pain Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>