fullSandbox11072023/force-app/main/default/objects/Pain_Profile__c/fields/Definitive_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Definitive_Account_Name__c</fullName>
    <label>Definitive Account Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>