fullSandbox11072023/force-app/main/default/objects/Pain_Profile__c/fields/Last_Year_Sales_LMA__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Sales_LMA__c</fullName>
    <description>Previous Year Sales from January 1st to toadys date.</description>
    <inlineHelpText>Previous Year Sales from January 1st to toadys date.</inlineHelpText>
    <label>Last Year Sales LMA Pumps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>