fullSandbox11072023/force-app/main/default/objects/Pain_Profile__c/fields/No_of_Operating_Rooms__c.field-meta.xml
<CustomField>
    <fullName>No_of_Operating_Rooms__c</fullName>
    <label>No of Operating Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>