fullSandbox11072023/force-app/main/default/objects/Pain_Profile__c/fields/Rolling_12_Month_Sales_LMA__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_Month_Sales_LMA__c</fullName>
    <inlineHelpText>Current 12 months rolling sales from todays date.</inlineHelpText>
    <label>Rolling 12 Month Sales ($) LMA Pumps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>