fullSandbox11072023/force-app/main/default/objects/Pain_Profile__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <formula>Account__r.BillingStreet</formula>
    <label>Street</label>
    <type>Text</type>
</CustomField>