fullSandbox11072023/force-app/main/default/objects/Pain_Profile__c/fields/YTD_Sales_LMA__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales_LMA__c</fullName>
    <inlineHelpText>Current sales from January 1st to todays date</inlineHelpText>
    <label>YTD Sales LMA Pumps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>