fullSandbox11072023/force-app/main/default/objects/Pain_Profile__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <formula>MID( Account__r.BillingPostalCode, 0, 5)</formula>
    <label>Zip</label>
    <type>Text</type>
</CustomField>